--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -2,14 +2,14 @@
 <resources>
 
     <string name="app_name">Horeca</string>
-    <string name="action_settings">Settings</string>
-    <string name="button_choose_horeca">Choose new horeca</string>
+    <string name="action_settings">Préférences</string>
+    <string name="button_choose_horeca">Choisir nouveau horeca</string>
     <string name="title_activity_horeca_list">Restaurants</string>
     <string name="title_activity_plat_list">Menu</string>
-    <string name="title_activity_plat">Description of the dish</string>
-    <string name="plat_price_label"><b>Price: </b></string>
+    <string name="title_activity_plat">Description du plat</string>
+    <string name="plat_price_label"><b>Prix: </b></string>
     <string name="plat_description_label"><b>Description:</b></string>
     <string name="plat_stock_label"><b>Stock: </b></string>
-    <string name="plat_stock_unknown">unknown</string>
-
+    <string name="plat_stock_unknown">inconnu</string>
+    
 </resources>
