--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -11,5 +11,7 @@
     <string name="plat_description_label"><b>Description:</b></string>
     <string name="plat_stock_label"><b>Stock: </b></string>
     <string name="plat_stock_unknown">inconnu</string>
+    <string name="plat_ingredients_label"><b>Ingrédients:</b></string>
+    <string name="plat_ingredients_none">Aucun ingrédient.</string>
     
 </resources>
