--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -5,13 +5,16 @@
     <string name="action_settings">Préférences</string>
     <string name="button_choose_horeca">Choisir nouveau horeca</string>
     <string name="title_activity_horeca_list">Restaurants</string>
+    <string name="title_activity_horeca">Restaurant choisi</string>
     <string name="title_activity_plat_list">Menu</string>
     <string name="title_activity_plat">Description du plat</string>
+    <string name="horeca_description_label"><b>Description:</b></string>
     <string name="plat_price_label"><b>Prix: </b></string>
     <string name="plat_description_label"><b>Description:</b></string>
     <string name="plat_stock_label"><b>Stock: </b></string>
     <string name="plat_stock_unknown">inconnu</string>
     <string name="plat_ingredients_label"><b>Ingrédients:</b></string>
     <string name="plat_ingredients_none">Aucun ingrédient.</string>
+    <string name="menu">Menu:</string>
     
 </resources>
