--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,13 +5,15 @@
     <string name="action_settings">Settings</string>
     <string name="button_choose_horeca">Choose new horeca</string>
     <string name="title_activity_horeca_list">Restaurants</string>
-    <string name="title_activity_plat_list">Menu</string>
+    <string name="title_activity_horeca">Chosen restaurant</string>
     <string name="title_activity_plat">Description of the dish</string>
+    <string name="horeca_description_label"><b>Description:</b></string>
     <string name="plat_price_label"><b>Price: </b></string>
     <string name="plat_description_label"><b>Description:</b></string>
     <string name="plat_stock_label"><b>Stock: </b></string>
     <string name="plat_stock_unknown">unknown</string>
     <string name="plat_ingredients_label"><b>Ingredients:</b></string>
     <string name="plat_ingredients_none">No ingredient.</string>
+    <string name="menu">Menu:</string>
 
 </resources>
