--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,8 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="button_choose_horeca">Choose new horeca</string>
     <string name="title_activity_horeca_list">Restaurants</string>
-    <string name="title_activity_horeca">Chosen restaurant</string>
-    <string name="title_activity_plat">Description of the dish</string>
+    <string name="horeca_numtel_label"><b>Phone number: </b></string>
     <string name="horeca_description_label"><b>Description:</b></string>
     <string name="plat_price_label"><b>Price: </b></string>
     <string name="plat_description_label"><b>Description:</b></string>
@@ -14,6 +13,6 @@
     <string name="plat_stock_unknown">unknown</string>
     <string name="plat_ingredients_label"><b>Ingredients:</b></string>
     <string name="plat_ingredients_none">No ingredient.</string>
-    <string name="menu">Menu:</string>
+    <string name="menu"><b>Menu:</b></string>
 
 </resources>
