--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -9,6 +9,7 @@
     <string name="horeca_numtel_label"><b>Numéro de téléphone: </b></string>
     <string name="horeca_description_label"><b>Description:</b></string>
     <string name="plat_price_label"><b>Prix: </b></string>
+    <string name="plat_price_currency"> €</string>	
     <string name="plat_description_label"><b>Description:</b></string>
     <string name="plat_stock_label"><b>Stock: </b></string>
     <string name="plat_stock_unknown">inconnu</string>
