--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="button_choose_horeca">Choose new horeca</string>
     <string name="title_activity_horeca_list">Restaurants in %1$s</string>
     <string name="ville_spinner_label"><b>City:</b></string>
+    <string name="horecatype_label"><b>Restaurant type:</b></string>
+    <string name="distance_max_label"><b>Distance max [m]:</b></string>
+    <string name="invalid_distance_max_warning">Invalid distance max, leave it empty for no distance max.</string>
     <string name="horeca_numtel_label"><b>Phone number: </b></string>
     <string name="horeca_description_label"><b>Description:</b></string>
     <string name="plat_price_label"><b>Price: </b></string>
