--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_activity_horeca_list">Restaurants in %1$s</string>
     <string name="ville_spinner_label"><b>City:</b></string>
     <string name="horecatype_label"><b>Restaurant type:</b></string>
+    <string name="plattype_label"><b>Plat type:</b></string>
     <string name="distance_max_label"><b>Distance max [m]:</b></string>
     <string name="invalid_distance_max_warning">Invalid distance max, leave it empty for no distance max.</string>
     <string name="horeca_numtel_label"><b>Phone number: </b></string>
