--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="horecatype_prompt">Restaurant type:</string>
     <string name="plattype_label"><b>Plat type:</b></string>
     <string name="plattype_placeholder">Any type</string>
+    <string name="ingredient_label"><b>Ingredient wanted (blank means none):</b></string>
     <string name="distance_max_label"><b>Distance max [m]:</b></string>
     <string name="invalid_distance_max_warning">Invalid distance max, leave it empty for no distance max.</string>
     <string name="horeca_numtel_label"><b>Phone number: </b></string>
