--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,10 @@
 <resources>
 
     <string name="app_name">Horeca</string>
-    <string name="mail">Adresse e-mail :</string>
-    <string name="mot_de_passe">Mot de passe :</string>
+    <string name="title_sign_in">Sign in</string>
+    <string name="mail"><b>Email address:</b></string>
+    <string name="mot_de_passe"><b>Password:</b></string>
+    <string name="sign_in_button">Sign in</string>
     <string name="action_settings">Settings</string>
     <string name="button_choose_horeca">Choose new horeca</string>
     <string name="title_activity_horeca_list">Restaurants in %1$s</string>
