--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,10 @@
     <string name="mot_de_passe"><b>Password:</b></string>
     <string name="wrong_password">Wrong password.</string>
     <string name="sign_in_button">Sign in</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_signUp">Sign up</string>
+    <string name="action_signIn">Sign in</string>
+    <string name="action_signOut">Sign out</string>
+    <string name="action_profile">Profile</string>
     <string name="button_choose_horeca">Choose new horeca</string>
     <string name="title_activity_horeca_list">Restaurants in %1$s</string>
     <string name="ville_spinner_label"><b>City:</b></string>
