--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="mail"><b>Email address:</b></string>
     <string name="unused_email">There is no user with this email</string>
     <string name="mot_de_passe"><b>Password:</b></string>
+    <string name="password_confirmation">Password confirmation</string>
     <string name="wrong_password">Wrong password.</string>
     <string name="sign_in_button">Sign in</string>
      <string name="sign_up_button">Sign up</string>
@@ -60,5 +61,7 @@
     <string name="title_activity_commandes">CommandesActivity</string>
     <string name="invalid_amount_warning">Invalid amount</string>
     <string name="horeca_is_favorite">Is favorite:</string>
+    <string name="name">Name</string>
+    <string name="address">Address</string>
 
 </resources>
