--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="title_sign_in">Sign in</string>
     <string name="title_sign_up">Sign up</string>
     <string name="mail"><b>Email address:</b></string>
+    <string name="mail_taken">Email already taken</string>
+    <string name="wrong_password_confirmation">Passwords do not match</string>
     <string name="unused_email">There is no user with this email</string>
     <string name="mot_de_passe"><b>Password:</b></string>
     <string name="password_confirmation">Password confirmation</string>
