--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,8 @@
 <resources>
 
     <string name="app_name">Horeca</string>
+    <string name="title_Profile">Profile</string>
+    <string name="Change_psw">Change Password</string>
     <string name="title_sign_in">Sign in</string>
     <string name="title_sign_up">Sign up</string>
     <string name="mail"><b>Email address:</b></string>
@@ -9,6 +11,9 @@
     <string name="wrong_password_confirmation">Passwords do not match</string>
     <string name="unused_email">There is no user with this email</string>
     <string name="mot_de_passe"><b>Password:</b></string>
+    <string name="ancien_mdp"><b>Password :</b></string>
+    <string name="nouveau_mdp"><b>New password :</b></string>
+    <string name="title_changepss">Change password</string>
     <string name="password_confirmation"><b>Password confirmation</b></string>
     <string name="wrong_password">Wrong password.</string>
     <string name="sign_in_button">Sign in</string>
@@ -65,5 +70,6 @@
     <string name="horeca_is_favorite">Is favorite:</string>
     <string name="name"><b>Name</b></string>
     <string name="address">Address</string>
+    <string name="change_pass_button">Change password</string>
 
 </resources>
