--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="password_confirmation"><b>Password confirmation</b></string>
     <string name="wrong_password">Wrong password.</string>
     <string name="sign_in_button">Sign in</string>
-     <string name="sign_up_button">Sign up</string>
+    <string name="sign_up_button">Sign up</string>
     <string name="action_signUp">Sign up</string>
     <string name="action_signIn">Sign in</string>
     <string name="action_signOut">Sign out</string>
@@ -41,6 +41,7 @@
     <string name="horeca_distance_label"><b>Distance: </b></string>
     <string name="horeca_numtel_label"><b>Phone number: </b></string>
     <string name="horeca_description_label"><b>Description:</b></string>
+    <string name="horeca_favorite_description"><b>Is this restaurant one of your favorite?</b></string>
     <string name="plat_price_label"><b>Price: </b></string>
     <string name="plat_price_currency"> €</string>
     <string name="plat_description_label"><b>Description:</b></string>
