--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="distance_max_label"><b>Distance max [m]:</b></string>
     <string name="invalid_distance_max_warning">Invalid distance max, leave it empty for no distance max.</string>
     <string name="gps_warning">GPS coordinate could not be fetched.</string>
+    <string name="horeca_list_message">Pick a restaurant</string>
     <string name="horeca_distance_label"><b>Distance: </b></string>
     <string name="horeca_numtel_label"><b>Phone number: </b></string>
     <string name="horeca_description_label"><b>Description:</b></string>
