Fix menu automatic updating

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,21 +22,23 @@
     <string name="action_signIn">Sign in</string>
     <string name="action_signOut">Sign out</string>
     <string name="action_profile">Profile</string>
-    <string name="button_choose_horeca">Choose new horeca</string>
+    <string name="button_choose_horeca">Choose new restaurant</string>
     <string name="title_activity_horeca_list">Restaurants in %1$s</string>
     <string name="ville_spinner_label"><b>City:</b></string>
-    <string name="horecatype_label"><b>Restaurant type:</b></string>
+    <string name="horecatype_label"><b>Restaurant type*:</b></string>
     <string name="horecatype_placeholder">Any type</string>
     <string name="horecatype_prompt">Restaurant type:</string>
-    <string name="plattype_label"><b>Plat type:</b></string>
+    <string name="plattype_label"><b>Dish type*:</b></string>
     <string name="plattype_placeholder">Any type</string>
-    <string name="ingredient_label"><b>Ingredient wanted (blank means none):</b></string>
-    <string name="price_min_label"><b>Price min [€]:</b></string>
+    <string name="plattype_prompt">Dish type:</string>
+    <string name="ingredient_label"><b>Specific ingredient*:</b></string>
+    <string name="price_min_label"><b>Price min [€]*:</b></string>
     <string name="invalid_price_min_warning">Invalid price min, leave it empty for no distance max.</string>
-    <string name="price_max_label"><b>Price max [€]:</b></string>
+    <string name="price_max_label"><b>Price max [€]*:</b></string>
     <string name="invalid_price_max_warning">Invalid price max, leave it empty for no distance max.</string>
-    <string name="distance_max_label"><b>Distance max [m]:</b></string>
+    <string name="distance_max_label"><b>Distance max [m]*:</b></string>
     <string name="invalid_distance_max_warning">Invalid distance max, leave it empty for no distance max.</string>
+    <string name="asterics_explanation">* Optional</string>
     <string name="gps_warning">GPS coordinate could not be fetched.</string>
     <string name="horeca_list_message">Pick a restaurant</string>
     <string name="horeca_distance_label"><b>Distance: </b></string>
