Change ouverture list design

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="plat_ingredients_label"><b>Ingredients:</b></string>
     <string name="plat_ingredients_none">No ingredient.</string>
     <string name="menu"><b>Menu:</b></string>
-    <string name="horaire"><b>Schedule:</b></string>
+    <string name="horaire"><b>Choose your slot:</b></string>
     <string name="title_activity_ouverture">Opening</string>
     <string name="ouverture_debut_label"><b>From:</b></string>
     <string name="ouverture_fin_label"><b>To:</b></string>
