Fix overlapping name/price and name/distance

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    
+    <color name="white">#FFFFFF</color>
 
     <string name="app_name">Horeca</string>
     <string name="title_Profile">Profile</string>
